# zorvyn-financial-dashboard

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/: 20260402062913_init_schema.sql
public/: index.html
src/: main.rs
src/controllers/: authentication_controllers.rs  category_controllers.rs  counterparty_controllers.rs  dashboard_controllers.rs  mod.rs  transaction_controllers.rs  user_controllers.rs
src/middlewares/: auth.rs  rate_limit.rs  rbac.rs
src/models/: authentication_models.rs  category_models.rs  counterparty_models.rs  dashboard_models.rs  mod.rs  transaction_models.rs  user_models.rs
src/routes/: authentication_routes.rs  category_routes.rs  counter_party_routes.rs  dashboard_routes.rs  mod.rs  transaction_routes.rs  user_routes.rs
src/services/: authentication_services.rs  db.rs  errors.rs  mod.rs
