[package]
name = "zorvyn-finance-tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version = "1.50.0", features = ["full"]}
axum = {version = "0.8.8", features = ["tokio"]}
axum-debug = "0.3.3"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "chrono","runtime-tokio-native-tls", "macros", "migrate"] }
tracing-subscriber = { version = "0.3.23", features = ["json", "env-filter"] }
tracing = "0.1.44"
serde = { version = "1.0.228", features = ["derive"] }
dotenv = "0.15.0"
tracing-appender = "0.2.4"
chrono = { version = "0.4.44", features = ["serde"] }
validator = {version = "0.20.0", features = ["derive"]}
base64 = "0.22.1"
sha2 = "0.10.9"
jsonwebtoken = "10.3.0"